<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjsu.se195.uniride.SignUpActivity"
    android:background="@drawable/gradient">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="177dp"
        android:drawableLeft="@drawable/ic_user_outline"
        android:ellipsize="end"
        android:hint="@string/info_first"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_name"
        android:drawableLeft="@drawable/ic_user_outline"
        android:ellipsize="end"
        android:hint="@string/info_last"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="10dp" />


    <EditText
        android:id="@+id/create_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="48dp"
        android:drawableLeft="@drawable/ic_user_outline"
        android:ellipsize="end"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp" />

    <!--<EditText-->
    <!--android:id="@+id/create_email"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:ellipsize="end"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:hint="@string/hint_email"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:maxLines="1" />-->

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/create_email"
        android:layout_marginTop="53dp"
        android:drawableLeft="@drawable/ic_user_password"
        android:ellipsize="end"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp" />

    <Spinner
        android:id="@+id/chosen_organization"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/create_password"
        android:dropDownWidth="match_parent"
        android:prompt="@string/organizations_prompt"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/save_information"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/info_save"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:background="@drawable/button_login"/>


</RelativeLayout>

<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--tools:context="com.sjsu.se195.uniride.SignUpActivity"-->
    <!--android:background="@color/gradient0">-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
            <!--android:id="@+id/uniride_logo"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200px"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
            <!--android:adjustViewBounds="false"-->
            <!--android:src="@mipmap/uniride_logo" />-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="63dp"-->
            <!--android:orientation="horizontal">-->

            <!--<EditText-->
                <!--android:id="@+id/create_email"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:ellipsize="end"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:hint="@string/hint_email"-->
                <!--android:inputType="textEmailAddress"-->
                <!--android:maxLines="1" />-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<EditText-->
                <!--android:id="@+id/create_password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:ellipsize="end"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:hint="@string/hint_password"-->
                <!--android:inputType="textPassword"-->
                <!--android:maxLines="1" />-->
        <!--</LinearLayout>-->


        <!--<LinearLayout-->
            <!--android:id="@+id/create_account_layout"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_alignLeft="@+id/layout_email_password"-->
            <!--android:layout_alignStart="@+id/layout_email_password"-->
            <!--android:layout_below="@+id/layout_email_password">-->

            <!--<Button-->
                <!--android:id="@+id/register_button"-->
                <!--android:layout_width="354dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Register" />-->
        <!--</LinearLayout>-->

    <!--</LinearLayout>-->

    <!--<ProgressBar-->
        <!--android:id="@+id/progressbar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:visibility="gone"/>-->

<!--</RelativeLayout>-->